# my-movies

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
.inlang/: settings.json
apps/tauri/: IOS_INSTALL.md  IOS_WEBSOCKET_SETUP.md  package.json  rustup-cargo-wrapper.sh  tauri-ios-build.sh
apps/tauri/scripts/: setup-ios.sh
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json  mobile.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
apps/web/src/: main.tsx
apps/web/src/components/: Avatar.tsx  FAB.tsx  LoadingScreen.tsx  PosterImage.tsx  VirtualizedMovieGrid.tsx
apps/web/src/components/ui/: Button.test.tsx  Button.tsx  Card.tsx  Input.test.tsx  Input.tsx  Modal.test.tsx  Modal.tsx  index.ts
apps/web/src/hooks/: useAuth.tsx  useI18n.tsx  useTheme.tsx  useWebSocket.ts
apps/web/src/lib/: api.ts  i18n.ts  imageLoader.ts  imageQueue.ts  scanner.ts  utils.test.ts  ws.ts
apps/web/src/locales/: README.md  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt.json  ru.json  zh.json
apps/web/src/routes/: __root.tsx  backup.tsx  forgot-password.tsx  import.tsx  index.tsx  login.tsx  me.tsx  movies.$movieId.tsx  movies.index.tsx  movies.tsx  reset-password.tsx  scan.tsx  series.tsx  settings.tsx  users.tsx
apps/web/src/styles/: globals.css
apps/web/src/test/: setup.ts
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  test_helpers.rs
crates/core/src/db/: mod.rs
crates/core/src/db/migrations/: 001_create_users.sql  002_create_movies.sql  003_create_series.sql  004_create_collections.sql  005_add_password_reset.sql  006_add_poster_path.sql  007_create_settings.sql  009_add_user_language.sql  010_add_user_include_adult.sql  011_add_user_avatar.sql  012_add_user_avatar_data.sql  013_add_movie_poster_data.sql  014_remove_poster_path.sql  015_add_collection_fields.sql  016_add_user_preferences.sql
crates/core/src/models/: collection.rs  common.rs  mod.rs  movie.rs  series.rs  setting.rs  user.rs
crates/core/src/services/: auth.rs  collections.rs  ean.rs  import.rs  mod.rs  movies.rs  series.rs  settings.rs  tmdb.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  lib.rs  main.rs
crates/server/src/middleware/: auth.rs
crates/server/src/routes/: auth.rs  auth_complete.rs  collections.rs  import.rs  mod.rs  movies.rs  scan.rs  series.rs  settings.rs  users.rs  ws.rs
docker/: Dockerfile  docker-compose.yml  litestream.yml
