[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/server",
    "apps/tauri/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "limit"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
argon2 = "0.5"

# HTTP client (for TMDB/EAN APIs)
reqwest = { version = "0.13", features = ["json"] }

# Utilities
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# CSV import
csv = "1.3"

# Regex for parsing
regex = "1.10"

# Tauri
tauri = { version = "2.9" }
tauri-build = { version = "2.0" }
tauri-plugin-barcode-scanner = "2.4"
