[package]
name = "my-movies-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Async
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# CSV
csv = { workspace = true }

# Config
envy = "0.4"

# URL encoding
urlencoding = "2.1"

# Regex for title cleaning
regex = "1"

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3.12"
uuid = { workspace = true }
once_cell = "1.19"