[package]
name = "my-movies-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "my_movies_server"
path = "src/lib.rs"

[[bin]]
name = "my-movies-server"
path = "src/main.rs"

[dependencies]
my-movies-core = { path = "../core" }

# Async
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }

# WebSocket
futures = "0.3"

# HTTP client (for downloading poster images)
reqwest = { workspace = true }

# Regex for parsing collection descriptions
regex = { workspace = true }

# ZIP archive support for backup/restore
zip = "7"

# needed for zip v7 v0.15.3 does not support crc v3
lzma-rust2 = "0.15.6"

# Image processing for thumbnails
image = "0.25"

[dev-dependencies]
# Testing
axum-test = "18"
tokio-test = "0.4"
tower = { workspace = true }
once_cell = "1.19"

# needed for zip v7 v0.15.3 does not support crc v3
[package.metadata.cargo-machete]
ignored = ["lzma-rust2"]