[package]
name = "my-movies-tauri"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

# Embedded server
my-movies-server = { path = "../../../crates/server" }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
